--- a/index.html
+++ b/index.html
@@ -730,7 +730,7 @@
                     </div>
                     <p id="description">이 같이 변수 </p><p id="code">foo</p><p id="description">를 선언했습니다. 현재 변수 </p><p id="code">foo</p><p id="description">는 문자열 변수입니다.</p>
                     <div id="code">
-                        <pre><code><p id="codeBox">foo = <p id="num">12345678</p>;</p></code></pre>
+                        <pre><code><p id="codeBox">foo = 12345678;</p></code></pre>
                     </div>
                     <p id="description">그리고 같은 변수에 숫자값을 할당할 수도 있습니다. 하지만 자료형을 변환하지 않는 경우도 있습니다:</p>
                     <div id="code">
