--- a/index.html
+++ b/index.html
@@ -15,11 +15,17 @@
     <link href="https://fonts.googleapis.com/css?family=Sen&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style/base.css">
     <link rel="stylesheet" href="style/sideBar.css">
+    <link rel="stylesheet" href="style/search.css">
     <title>Kakaotalkbot Docs</title>
 </head>
 <body>
     <header>
         <img id="kkotb_rfnc" src="img/kkotalkbot_rfnc.png">
+        <div id="wrap">
+          <form action="" autocomplete="on">
+          <input id="search" name="search" type="text" placeholder="What're we looking for ?"><input id="search_submit" value="Rechercher" type="submit">
+          </form>
+        </div>
     </header>
     <section id="body">
         <div id="side">
