--- a/index.html
+++ b/index.html
@@ -21,12 +21,16 @@
 <body>
     <header>
         <img id="kkotb_rfnc" src="img/kkotalkbot_rfnc.png">
-        <div id="wrap">
-          <form action="" autocomplete="on">
-          <input id="search" name="search" type="text" placeholder="What're we looking for ?"><input id="search_submit" value="Rechercher" type="submit">
-          </form>
-        </div>
     </header>
+    <script>
+    var url = decodeURIComponent(location.href).substring("https://kkotbot-docs.kro.kr?".length);
+    if(url.startsWith("search=")){
+        //이동
+        var search=url.substring("search=".length);
+    }else if(url!=""){
+        //
+    }
+    </script>
     <section id="body">
         <div id="side">
             <div id="sideBar">
