--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <img id="kkotb_rfnc" src="img/kkotalkbot_rfnc.png">
     </header>
     <script>
-    var url = decodeURIComponent(location.href).substring("https://kkotbot-docs.kro.kr?".length);
+    var url = decodeURIComponent(location.href).substring("https://kkotbot-docs.kro.kr/?".length);
     if(url.startsWith("search=")){
         //이동
         var search=url.substring("search=".length);
