--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <img id="kkotb_rfnc" src="img/kkotalkbot_rfnc.png">
         <div class="search-container">
           <input Id='searchBox' type="text" placeholder="Search.." name="search">
-          <button type="submit" onClick="location.href='https://kkotbot-docs.kro.kr/?search='+encodeURIComponent(document.getElementById('searchBox').value)"><i class="fa fa-search"></i></button>
+          <button type="submit" onClick="location.href='https://kkotbot-docs.kro.kr/?search='+encodeURIComponent(document.getElementById('searchBox').value)"><img src="img/search_icon.jpg" width="50" height="50"></button>
         </div>
     </header>
     <script>
