--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
          var url = decodeURIComponent(location.href).substring("https://kkotbot-docs.kro.kr/?".length);
             if(url.startsWith("search=")){
                 //이동
+                function moveToDiv(location){$("html").animate({scrollTop : $("div#"+location).offset().top - 155}, 1500, "swing")}
                 var search=url.substring("search=".length);
             }else if(url==""){
                 location.href = 'https://kkotbot-docs.kro.kr/404.html';
