--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <link href="https://fonts.googleapis.com/css?family=Sen&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style/base.css">
     <link rel="stylesheet" href="style/sideBar.css">
+    <link rel="stylesheet" href="style/search.css">
     <title>Kakaotalkbot Docs</title>
 </head>
 <body>
