--- a/404.html
+++ b/404.html
@@ -3,15 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="script/jquery.js"></script>
-    <script src="script/dark.js"></script>
-    <link rel="shortcut icon" type="image/x-icon" href="img/icon.ico">
+    <script src="https://kkotbot-docs.kro.kr/script/jquery.js"></script>
+    <script src="https://kkotbot-docs.kro.kr/script/dark.js"></script>
+    <link rel="shortcut icon" type="image/x-icon" href="https://kkotbot-docs.kro.kr/img/icon.ico">
     <link rel="stylesheet" href="style/404.css">
     <title>404 Not Found</title>
 </head>
 <body>
     <div>
-        <img id="NF" src="img/NotFound.png">
+        <img id="NF" src="https://kkotbot-docs.kro.kr/img/NotFound.png">
         <p id="title">여기가 어딘가요?</p>
         <p id="sT">이곳은 존재하지 않은 공간입니다. 막다른 길로 오셨나 보군요.</p>
     </div>
