--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                             break;
                         }
                     }
-                    if(index=-1)location.href = 'https://kkotbot-docs.kro.kr/search_not_found.html';
+                    if(index=-1)location.href = 'https://kkotbot-docs.kro.kr/search_not_found?='+search_text;
                 }
                 search();
             }else{
