--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                             }
                         }
                     }
-                    if(searching==true)location.href = 'https://franknoh.github.io/kakaotalkbot-docs/search_not_found?='+search_text;
+                    if(searching==true)//location.href = 'https://franknoh.github.io/kakaotalkbot-docs/search_not_found?='+search_text;
                 }
                 search();
             }else{
