--- a/search_not_found.html
+++ b/search_not_found.html
@@ -16,7 +16,7 @@
         <p id="sT"></p>
     </div>
   <script>
-    document.getElementById('sT').innerHTML='\''+decodeURIComponent(location.href).substring("https://franknoh.github.io/kakaotalkbot-docs/search_not_found?=".length)+'\'라는 검색결과가 없습니다'
+    document.getElementById('sT').innerHTML='\''+decodeURIComponent(location.href).substring("https://kkotbot-docs.kro.kr/search_not_found?=".length)+'\'라는 검색결과가 없습니다'
   </script>
 </body>
 </html>
