--- a/index.html
+++ b/index.html
@@ -11,8 +11,11 @@
     <script src="script/jquery.js"></script>
     <script src="script/animation.js"></script>
     <script src="script/dark.js"></script>
+    <script src="script/inko.js"></script>
+    <script src="script/toast.js"></script>
     <link id="favicon" rel="shortcut icon" type="image/x-icon" href="img/icon.ico">
     <link href="https://fonts.googleapis.com/css?family=Sen&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="style/toast.css">
     <link rel="stylesheet" href="style/base.css">
     <link rel="stylesheet" href="style/sideBar.css">
     <link rel="stylesheet" href="style/search.css">
@@ -27,6 +30,7 @@
             </form>
         </div>
     </header>
+    <div class="toastjs-container" role="alert" aria-hidden="true"><div class="toastjs"></div></div>
     <section id="body">
         <div id="side">
             <div id="sideBar">
