--- a/search_not_found.html
+++ b/search_not_found.html
@@ -17,17 +17,19 @@
     </div>
   <script>
       var i = 0;
-      var inner
-      var txt = '\''+decodeURIComponent(location.href).substring("https://kkotbot-docs.kro.kr/search_not_found?=".length);
+      var inner = '';
+      var txt = decodeURIComponent(location.href).substring("https://kkotbot-docs.kro.kr/search_not_found?=".length);
       var speed = 50;;
       
       function typeWriter() {
         if (i < txt.length) {
-          document.getElementById("demo").innerHTML += txt.charAt(i);
+          inner += txt.charAt(i);
+          document.getElementById("sT").innerHTML='\''+inner+'\'라는 검색결과가 없습니다.';
           i++;
           setTimeout(typeWriter, speed);
         }
       }
+      typeWriter()
   </script>
 </body>
 </html>
