--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <script src="script/dark.js"></script>
     <script src="script/inko.js"></script>
     <script src="script/toast.js"></script>
+    <script src="https://raw.githubusercontent.com/juliangarnier/anime/master/lib/anime.min.js"></script>
     <link id="favicon" rel="shortcut icon" type="image/x-icon" href="img/icon.ico">
     <link href="https://fonts.googleapis.com/css?family=Sen&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style/toast.css">
