--- a/search_not_found.html
+++ b/search_not_found.html
@@ -7,6 +7,12 @@
     <script src="script/dark.js"></script>
     <link rel="shortcut icon" type="image/x-icon" href="img/icon.ico">
     <link rel="stylesheet" href="style/404.css">
+    <!-- UIkit CSS -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/uikit@3.5.6/dist/css/uikit.min.css" />
+    
+    <!-- UIkit JS -->
+    <script src="https://cdn.jsdelivr.net/npm/uikit@3.5.6/dist/js/uikit.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/uikit@3.5.6/dist/js/uikit-icons.min.js"></script>
     <title>Search Not Found</title>
 </head>
 <body>
