--- a/search_not_found.html
+++ b/search_not_found.html
@@ -20,6 +20,7 @@
         <img id="NF" src="img/NotFound.png">
         <p id="title">검색결과가 없습니다</p>
         <p id="sT">''라는 검색결과가 없습니다</p>
+        <div class="uk-child-width-1-3@m" uk-grid uk-scrollspy="cls: uk-animation-fade; target: .uk-card; delay: 500; repeat: true"><div><div class="uk-card uk-card-default uk-card-body"><h3 class="uk-card-title">Fade</h3></div></div></div>
         <button class = "asText" onClick = "window.history.back();" hidden = 'true'> 뒤로가기 </button>
     </div>
   <script>
