--- a/index.html
+++ b/index.html
@@ -2877,7 +2877,8 @@
                 <p id="thank_you" class="주현명님"><strong>주현명</strong> 님</p><br>
                 <p id="thank_you" class="Violet_XF님"><strong>Violet XF</strong> 님</p><br>
                 <p id="thank_you" class="도미님"><strong>도미</strong> 님</p><br>
-                <p id="thank_you" class="JusticeHui님"><strong>JusticeHui</strong> 님</p>
+                <p id="thank_you" class="JusticeHui님"><strong>JusticeHui</strong> 님</p><br>
+                <p id="thank_you" class="franknoh님"><strong>franknoh</strong> 님</p>
             </div>
         </section>
     </section>
