--- a/index.html
+++ b/index.html
@@ -8,30 +8,27 @@
     <meta property="og:title" content="KakaotalkBot Docs">
     <meta property="og:description" content="카카오톡 봇의 정보가 모인 카카오톡 봇 문서입니다.">
     <meta property="og:image" content="https://kkotbot-docs.kro.kr/img/grp_img.jpg">
-    <script src="script/jquery.js"></script>
-    <script src="script/animation.js"></script>
-    <script src="script/dark.js"></script>
-    <script src="script/inko.js"></script>
-    <script src="script/toast.js"></script>
-    <script src="https://raw.githubusercontent.com/juliangarnier/anime/master/lib/anime.min.js"></script>
+    <script type="text/javascript" src="script/jquery.js"></script>
+    <script type="text/javascript" src="script/jquery-ui.js"></script>
+    <script type="text/javascript" src="script/animation.js"></script>
+    <script type="text/javascript" src="script/dark.js"></script>
+    <script type="text/javascript" src="script/toast.js"></script>
     <link id="favicon" rel="shortcut icon" type="image/x-icon" href="img/icon.ico">
     <link href="https://fonts.googleapis.com/css?family=Sen&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="style/toast.css">
     <link rel="stylesheet" href="style/base.css">
     <link rel="stylesheet" href="style/sideBar.css">
-    <link rel="stylesheet" href="style/search.css">
-    <title>Kakaotalkbot Docs</title>
+    <link rel="stylesheet" href="style/toast.css">
+    <title>KakaotalkBot Docs</title>
 </head>
 <body>
     <header>
-        <img id="kkotb_rfnc" src="img/kkotalkbot_rfnc.png">
+        <img id="kkotb_rfnc" src="img/docs.png">
         <div id="wrap">
-            <form action="" autocomplete="on">
-            <input id="search" name="search" type="text" placeholder="Search ?="><input id="search_submit" value="Rechercher" type="submit">
+            <form action="" autocomplete="off">
+            <input id="search" data-bg="#ff0d86" name="search" type="text" placeholder="검색할 내용을 입력하세요."><!--<button type="submit"><img id="search" src="img/search.png"></button>--><input id="search_submit" value="Rechercher" type="submit">
             </form>
         </div>
     </header>
-    <div class="toastjs-container" role="alert" aria-hidden="true"><div class="toastjs"></div></div>
     <section id="body">
         <div id="side">
             <div id="sideBar">
@@ -2878,143 +2875,10 @@
                 <p id="thank_you" class="Violet_XF님"><strong>Violet XF</strong> 님</p><br>
                 <p id="thank_you" class="도미님"><strong>도미</strong> 님</p><br>
                 <p id="thank_you" class="JusticeHui님"><strong>JusticeHui</strong> 님</p><br>
-                <p id="thank_you" class="franknoh님"><strong>franknoh</strong> 님</p>
+                <p id="thank_you" class="franknoh님"><strong>franknoh</strong> 님 <strong>★</strong></p>
             </div>
         </section>
     </section>
-    <script>
-var base = "https://kkotbot-docs.kro.kr/"
-function glide(pos){$("html").animate({scrollTop: $(pos).offset().top - 155}, 1500, "swing");}
-$(document).ready(function() {
-    if (decodeURIComponent(location.href).startsWith(base + "?")) {
-        var url = decodeURIComponent(location.href).substring(base.length + 1);
-        if (url.startsWith("search=")) {
-            var search_text = url.substring("search=".length);
-            //초기화
-            document.getElementById('search').value = search_text;
-            //이동
-            var searched = false;
-            var searching = true;
-            var title = [];
-            var contents = [];
-            for (var i = 0; i < document.getElementsByClassName("content").length; i++) {
-                if (searching == true) {
-                    if (!!document.getElementsByClassName("content")[i].getElementsByClassName("content")) {
-                        for (var j = 0; j < document.getElementsByClassName("content")[i].getElementsByClassName("content").length; j++) {
-                            if (document.getElementsByClassName("content")[i].getElementsByClassName("content")[j].getElementsByTagName("p")[0].innerText.toLowerCase().replace(" ", "").trim().indexOf(search_text.toLowerCase().replace(" ", "").trim()) != -1) {
-                                title.push("div#" + document.getElementsByClassName("content")[i].getElementsByClassName("content")[j].id);
-                                searched = true;
-                            } else {
-                                contents.push("div#" + document.getElementsByClassName("content")[i].getElementsByClassName("content")[j].id);
-                                searched = true;
-                            }
-                        }
-                    } /*else*/
-                    if (document.getElementsByClassName("content")[i].innerText.toLowerCase().replace(" ", "").trim().indexOf(search_text.toLowerCase().replace(" ", "").trim()) != -1) {
-                        if (document.getElementsByClassName("content")[i].getElementsByTagName("p")[0].innerText.toLowerCase().replace(" ", "").trim().indexOf(search_text.toLowerCase().replace(" ", "").trim()) != -1) {
-                            title.push("div#" + document.getElementsByClassName("content")[i].id);
-                            searched = true;
-                        } else {
-                            contents.push("div#" + document.getElementsByClassName("content")[i].id);
-                            searched = true;
-                        }
-                    }
-                }
-            }
-            if (searched == false || document.getElementById("body").innerText.toLowerCase().replace(" ", "").trim().indexOf(search_text.toLowerCase().replace(" ", "").trim()) == -1) {
-                var inko = new Inko();
-                if (document.getElementById("body").innerText.toLowerCase().replace(" ", "").trim().indexOf(inko.ko2en(search_text).toLowerCase().replace(" ", "").trim()) != -1) {
-                    var searched = false;
-                    var searching = true;
-                    var title = [];
-                    var contents = [];
-                    for (var i = 0; i < document.getElementsByClassName("content").length; i++) {
-                        if (searching == true) {
-                            if (!!document.getElementsByClassName("content")[i].getElementsByClassName("content")) {
-                                for (var j = 0; j < document.getElementsByClassName("content")[i].getElementsByClassName("content").length; j++) {
-                                    if (document.getElementsByClassName("content")[i].getElementsByClassName("content")[j].getElementsByTagName("p")[0].innerText.toLowerCase().replace(" ", "").trim().indexOf(inko.ko2en(search_text).toLowerCase().replace(" ", "").trim()) != -1) {
-                                        title.push("div#" + document.getElementsByClassName("content")[i].getElementsByClassName("content")[j].id);
-                                        searched = true;
-                                    } else {
-                                        contents.push("div#" + document.getElementsByClassName("content")[i].getElementsByClassName("content")[j].id);
-                                        searched = true;
-                                    }
-                                }
-                            } /*else*/
-                            if (document.getElementsByClassName("content")[i].innerText.toLowerCase().replace(" ", "").trim().indexOf(inko.ko2en(search_text).toLowerCase().replace(" ", "").trim()) != -1) {
-                                if (document.getElementsByClassName("content")[i].getElementsByTagName("p")[0].innerText.toLowerCase().replace(" ", "").trim().indexOf(inko.ko2en(search_text).toLowerCase().replace(" ", "").trim()) != -1) {
-                                    title.push("div#" + document.getElementsByClassName("content")[i].id);
-                                    searched = true;
-                                } else {
-                                    contents.push("div#" + document.getElementsByClassName("content")[i].id);
-                                    searched = true;
-                                }
-                            }
-                        }
-                    }
-                    new Toast({message: '한-영 오타 수정입니다.\n'+search_text+'->'+inko.ko2en(search_text)});
-                    if (title[0]) {
-                        glide(title[0]);
-                    } else {
-                        glide(contents[0]);
-                    }
-                    console.log(title.join("\n"));
-                    console.log(contents.join("\n"));
-                } else if (document.getElementById("body").innerText.toLowerCase().replace(" ", "").trim().indexOf(inko.en2ko(search_text).toLowerCase().replace(" ", "").trim()) != -1) {
-                    var searched = false;
-                    var searching = true;
-                    var title = [];
-                    var contents = [];
-                    for (var i = 0; i < document.getElementsByClassName("content").length; i++) {
-                        if (searching == true) {
-                            if (!!document.getElementsByClassName("content")[i].getElementsByClassName("content")) {
-                                for (var j = 0; j < document.getElementsByClassName("content")[i].getElementsByClassName("content").length; j++) {
-                                    if (document.getElementsByClassName("content")[i].getElementsByClassName("content")[j].getElementsByTagName("p")[0].innerText.toLowerCase().replace(" ", "").trim().indexOf(inko.en2ko(search_text).toLowerCase().replace(" ", "").trim()) != -1) {
-                                        title.push("div#" + document.getElementsByClassName("content")[i].getElementsByClassName("content")[j].id);
-                                        searched = true;
-                                    } else {
-                                        contents.push("div#" + document.getElementsByClassName("content")[i].getElementsByClassName("content")[j].id);
-                                        searched = true;
-                                    }
-                                }
-                            } /*else*/
-                            if (document.getElementsByClassName("content")[i].innerText.toLowerCase().replace(" ", "").trim().indexOf(inko.en2ko(search_text).toLowerCase().replace(" ", "").trim()) != -1) {
-                                if (document.getElementsByClassName("content")[i].getElementsByTagName("p")[0].innerText.toLowerCase().replace(" ", "").trim().indexOf(inko.en2ko(search_text).toLowerCase().replace(" ", "").trim()) != -1) {
-                                    title.push("div#" + document.getElementsByClassName("content")[i].id);
-                                    searched = true;
-                                } else {
-                                    contents.push("div#" + document.getElementsByClassName("content")[i].id);
-                                    searched = true;
-                                }
-                            }
-                        }
-                    }
-                    new Toast({message: '영-한 오타 수정입니다.\n'+search_text+'->'+inko.en2ko(search_text)});
-                    if (title[0]) {
-                        glide(title[0]);
-                    } else {
-                        glide(contents[0]);
-                    }
-                    console.log(title.join("\n"));
-                    console.log(contents.join("\n"));
-                } else {
-                        new Toast({message: '\''+search_text+'\'라는 검색결과가 없습니다.', type : 'danger'})
-                }
-            } else if (searched == true) {
-                if (title[0]) {
-                    glide(title[0]);
-                } else {
-                    glide(contents[0]);
-                }
-                console.log(title.join("\n"));
-                console.log(contents.join("\n"));
-            }
-        } else {
-            console.log(url)
-            location.href = base + '404.html';
-        }
-    }
-});
-    </script>
+    <script type="text/javascript" src="script/search.js"></script>
 </body>
 </html>
