--- a/index.html
+++ b/index.html
@@ -13,13 +13,12 @@
     <script type="text/javascript" src="script/animation.js"></script>
     <script type="text/javascript" src="script/dark.js"></script>
     <script type="text/javascript" src="script/toast.js"></script>
-    <script type="text/javascript" src="script/inco.js"></script>
+    <script type="text/javascript" src="script/inko.js"></script>
     <link id="favicon" rel="shortcut icon" type="image/x-icon" href="img/icon.ico">
     <link href="https://fonts.googleapis.com/css?family=Sen&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style/base.css">
     <link rel="stylesheet" href="style/sideBar.css">
     <link rel="stylesheet" href="style/toast.css">
-    <link rel="stylesheet" href="style/search.css">
     <title>KakaotalkBot Docs</title>
 </head>
 <body>
